<resources>
    <string name="app_name" translatable="false">Character Ideas</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="submit">Submit</string>
    <string name="name_label">Name</string>
    <string name="origin_label">Origin</string>
    <string name="devotion_label">Devotion</string>
    <string name="archetype_label">Archetype</string>
    <string name="resume_label">Resume</string>
    <string name="deleteAttention">Attention</string>
    <string name="deleteCharacterMessage">You sure you want to delete this character \? </string>
    <string name="deleteCampaignMessage">You sure you want to delete this campaign \? </string>
    <string name="cancel">Cancel</string>
    <string name="justDoIt">Yes i\'m sure about it</string>
    <string name="archetype_text_label">Class</string>
    <string name="add_a_new_character_button" translatable="false">Add a new character</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="campaigns_tab">Campaigns</string>
    <string name="characters_tab">Characters</string>
    <string name="add_character">New</string>
    <string name="update">update</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="type_of_campaign">Type of campaign</string>
    <string name="system_name">System name</string>
    <string name="the_history_so_far">The history so far</string>

</resources>