<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/characterInfo"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/characters"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/name"
            android:textColor="@color/purple_500"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Character Name" />

        <TextView
            android:id="@+id/originLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/origin"
            android:textColor="@color/purple_500"
            android:text="@string/origin_label" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Character Origin" />

        <TextView
            android:id="@+id/devotionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/devotion"
            android:textColor="@color/purple_500"
            android:text="@string/devotion_label" />

        <TextView
            android:id="@+id/devotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Character Devotion" />

        <TextView
            android:id="@+id/archetypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/archetype"
            android:textColor="@color/purple_500"
            android:text="@string/archetype_text_label" />

        <TextView
            android:id="@+id/archetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Character Class" />

        <TextView
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="Simple Resume" />
    </LinearLayout>
</LinearLayout>